# NixOS-Config

./: .gitignore  .gitmodules  .hardware-configuration.nix.swp  README  TODO  \  configuration.nix  flake.nix  hardware-configuration.nix  home.nix  main-user.nix  result
doc/: README  README.md  TODO  TODO.md
features/: kitty.nix
home/bash/: bash.nix
home/chromium/: chromium.nix
home/git/: git.nix
home/hyprland/: hyprland.nix
home/kitty/: cheatsheet.txt  kitty.nix
home/nixvim/: nixvim.nix
home/rofi/: rofi.nix
home/swww/: wallpaper.sh
home/vscode/: vscode.nix
home/vscodium/: vscodium.nix
home/waybar/: style.css  waybar.nix
hosts/desktop/: hardware-configuration.nix
hosts/laptop/: configuration.nix  hardware-configuration.nix  home.nix
hosts/main_host/: configuration.nix  home.nix
modules/dev_templates/c++/: devenv.nix
modules/dev_templates/cpp_shell/: .clang-tidy  CMakeLists.txt  CMakePresets.json  README  README.md  flake.nix  hello.cpp  shell.nix
modules/dev_templates/cpp_shell/cmake/: Helpers.cmake
modules/dev_templates/cpp_shell/exercises/: CMakeLists.txt
modules/dev_templates/cpp_shell/exercises/hello/: CMakeLists.txt  main.cpp  printer.cpp  printer.h
modules/dev_templates/cpp_shell/exercises/hello/tests/: test.cpp
modules/dev_templates/python/: README  flake.nix
modules/dev_templates/rust_shell/: .devenv.flake.nix  README  README.md  devenv.nix  devenv.yaml  flake.nix
modules/dev_templates/rust_shell/.devenv/: input-paths.txt  nix-eval-cache.db-shm  nix-eval-cache.db-wal  profile  run  tasks.db-shm  tasks.db-wal
modules/dev_templates/rust_shell/.devenv/gc/: shell-1-link
modules/home-manager/: 1password.nix  chromium.nix  git.nix  home.nix  hyprland.nix  kitty.nix  lf.nix  notion-pwa.nix  rofi.nix  swww.nix  vscode.nix  wallpaper.nix  wlsunset.nix  zsh.nix
modules/home-manager/common/: common_programs.nix  git.nix  settings.nix  tmux.nix
modules/home-manager/common/neovim/: init.lua  neovim.nix
modules/home-manager/common/neovim/config/: init.lua
modules/home-manager/common/neovim/config/lua/config/: blink.lua  cmp.lua  colorscheme.lua  conform.lua  flash.lua  globals.lua  keymap.lua  lint.lua  lualine.lua  markdown.lua  null_ls.lua  nvim_notify.lua  obsidian.lua  oil.lua  peek.lua  perfanno.lua  plugins.lua  rainbow_delimiters.lua  render_markdown.lua  telescope.lua  tiny_inlinediagnostic.lua  treesitter.lua
modules/home-manager/common/neovim/config/lua/config/debugger/: dap-ui.lua  dap.lua  keymap.lua  plugins.lua
modules/home-manager/common/neovim/config/lua/config/lsp/: cmake.lua  cpp.lua  css.lua  lua.lua  markdown.lua  nix.lua  rust.lua  shell.lua
modules/home-manager/common/neovim/lua/config/: blink.lua  colorscheme.lua  conform.lua  dap.lua  gitsigns.lua  globals.lua  keymap.lua  lazy.lua  lualine.lua  notify.lua  nvim_lint.lua  obsidian.lua  oil_lsp_diag.lua  paths.lua  plugins.lua  render_markdown.lua  telescope.lua  todo_comments.lua  toggleterm.lua  treesitter.lua  treesitter_textobjects.lua  trouble.lua  ufo.lua  which_key.lua
modules/home-manager/common/neovim/lua/config/lsp/: cpp.lua  lua.lua  proto.lua  python.lua  rust.lua
modules/home-manager/common/zsh/: zsh.nix
modules/home-manager/computers/: brave.nix  home.nix  hyprland.nix  vscode.nix  wallpaper.nix
modules/home-manager/computers/ghostty/: ghostty.conf  ghostty.nix
modules/home-manager/computers/mako/: mako.conf  mako.nix
modules/home-manager/computers/neovim/: neovim.nix
modules/home-manager/computers/neovim/config/: init.lua
modules/home-manager/computers/neovim/config/lua/config/: colorscheme.lua  globals.lua  keymap.lua  null_ls.lua  perfanno.lua  plugins.lua
modules/home-manager/computers/neovim/config/lua/config/debugger/: dap.lua  (+1 more)
modules/home-manager/computers/waybar/: waybar.nix
modules/home-manager/computers/zsh/: zsh.nix
modules/home-manager/mako/: mako.conf  mako.nix
modules/home-manager/neovim/: neovim.nix
modules/home-manager/neovim/config/: init.lua
modules/home-manager/neovim/config/lsp/: lua_lsp.lua
modules/home-manager/neovim/config/lua/: oil.lua  plugins.lua
modules/home-manager/neovim/config/lua/config/: autocmd.lua  cmp.lua  colorscheme.lua  globals.lua  keymap.lua  lsp.lua  null_ls.lua  oil.lua  options.lua  plugins.lua  rainbow_delimiters.lua  toggleterm.lua  treesitter.lua
modules/home-manager/neovim/config/lua/config/debugger/: dap.lua  keymap.lua  persistent-breakpoints.lua  plugins.lua
modules/home-manager/neovim/config/lua/config/lsp/: cpp.lua  lua.lua  markdown.lua  nix.lua  python.lua  rust.lua  shell.lua
modules/home-manager/neovim/config/lua/plugins/: nvim-treesitter.lua  tokyonight.lua
modules/home-manager/notion/: notion.nix
modules/home-manager/swww/: wallpaper.sh
modules/home-manager/vscode/: settings.json  vscode.nix
modules/home-manager/waybar/: power_menu.sh  powermenu.sh  style.css  waybar.nix
modules/home-manager/wsl/: home.nix
modules/home-manager/zsh/: .p10k.zsh  .zprofile  zsh.nix
modules/nixos/: configuration.nix
modules/nixos/computers/: configuration.nix
modules/nixos/wsl/: configuration.nix
(+4 files in other folders)
